fix mobile name bug, content box overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -281,7 +281,7 @@ body.hebrew-bg {
         left: auto;
         right: auto;
         top: auto;
-        margin: 60px 16px 4rem 16px;
+        margin: 80px 16px 4rem 16px;
         max-height: none;
     }
     .profile {
